# Controle_Estoque_de_Jogos

./: Procurar.c  README.md  registro_estoque.txt
data/: estoque.txt  produtos.txt  registro_estoque.txt
include/: cadastro.h  consulta.h  datas.h  list_type.inl  lista_contagem.h  lista_generica.inl  lista_produto.h  macro_kit.h  produto.h  registro.h  relatorios.h  rota.h
projeto-loja-jogos/: CMakeLists.txt  README.md  gerador_produtos.c
projeto-loja-jogos/data/: produtos.txt
projeto-loja-jogos/include/: consulta.h  interface.h  lista.h  produto.h  registro.h  relatorios.h
projeto-loja-jogos/scripts/: gerar_registro_aleatorio.c
projeto-loja-jogos/src/: a.out  consulta.c  gerar_registro_aleatorio.c  interface.c  lista.c  main.c  registro.c  relatorios.c
scripts/: gerador_estoque.c  gerador_produtos.c  gerar_registro_aleatorio.c
src/: cadastro.c  consulta.c  interface.c  lista.c  lista_contagem.c  lista_produto.c  main.c  registro.c  relatorios.c
